--- a/projects.Rmd
+++ b/projects.Rmd
@@ -7,6 +7,10 @@ here's some examples.
 
 ## [My UniCal webpage](https://www.unical.it/portale/strutture/dipartimenti_240/dibest/docenti/montesanto/)
 
+## [my Courses]
+- [APPLIED HUMAN GENETICS](https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?70137&LANG=ITA&70137&LANG=ITA)
+- [TECHNIQUES IN FORENSIC GENETICS](https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?63499&LANG=ITA&63499&LANG=ITA)
+
 ## [Data Visualization in R](http://nickstrayer.me/visualization_in_r/)
 
 - An RMarkdown presentation on the common mistakes made in visualization and how to fix them.
