--- a/projects.Rmd
+++ b/projects.Rmd
@@ -7,7 +7,7 @@ here's some examples.
 
 ## [My UniCal webpage](https://www.unical.it/portale/strutture/dipartimenti_240/dibest/docenti/montesanto/)
 
-## [my Courses]
+## My courses
 - [APPLIED HUMAN GENETICS](https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?70137&LANG=ITA&70137&LANG=ITA)
 - [TECHNIQUES IN FORENSIC GENETICS](https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?63499&LANG=ITA&63499&LANG=ITA)
 
