--- a/projects.Rmd
+++ b/projects.Rmd
@@ -2,6 +2,9 @@
 title: "Projects"
 ---
 
+Dovrebbe andare bene
+
+
 Sometimes I like to do projects and then post them on the internet for the whole world to benefit!
 here's some examples. 
 
