--- a/projects.Rmd
+++ b/projects.Rmd
@@ -2,7 +2,7 @@
 title: "Projects"
 ---
 
-Dovrebbe andare bene
+Dovrebbe andare bene così
 
 
 Sometimes I like to do projects and then post them on the internet for the whole world to benefit!
