--- a/research.Rmd
+++ b/research.Rmd
@@ -2,5 +2,9 @@
 title: "Research"
 ---
 
-Sometimes I like to do projects and then post them on the internet for the whole world to benefit!
-here's some examples. 
+# Forensic DNA Phenotyping
+The FDP-Lab focused on the analysis of genetic and epigenetic data in the frame of a new field of Forenics Genetics called Forensic DNA Phenotyping. It is aimed at 
+
+
+# Recent pubblications
+
