--- a/index.Rmd
+++ b/index.Rmd
@@ -3,3 +3,7 @@ title: "Welcome to my website!"
 ---
 
 You're up and running!
+
+# Donation Button
+
+[![Donate](https://img.shields.io/badge/Donate-PayPal-green.svg)](https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=alberto.montesanto%40gmail.com&currency_code=EUR)
